Use TLS `passthrough` for adminserver using Kafka TLS secret cert+key (#343)
- Extract Secret management to stand-alone service class
- Utilize TLS in systemtests
- Move `ObservabilityManager` and test to `secrets` package (PR
feedback)
- Remove HSTS annotation, does not apply to passthrough TLS
- Update to kafka-admin-api 0.0.8